Dev/src/FinancialForce Revenue Recognition Expansion for PSA/objects/ffrr__RecognitionStagingTableLevel4__c.object
<CustomObject>
    <fields>
        <fullName>Expense__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expense</label>
        <referenceTo>pse__Expense__c</referenceTo>
        <relationshipLabel>Recognition Staging Table Level4</relationshipLabel>
        <relationshipName>Recognition_Staging_Table_Level4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Milestone</label>
        <referenceTo>pse__Milestone__c</referenceTo>
        <relationshipLabel>Recognition Staging Table Level4</relationshipLabel>
        <relationshipName>Recognition_Staging_Table_Level4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Recognition Staging Table Level4</relationshipLabel>
        <relationshipName>Recognition_Staging_Table_Level4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TimecardSplit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Timecard Split</label>
        <referenceTo>pse__Timecard__c</referenceTo>
        <relationshipLabel>Recognition Staging Table Level4</relationshipLabel>
        <relationshipName>Recognition_Staging_Table_Level4</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>